--- a/VirtualBike/AndroidManifest.xml
+++ b/VirtualBike/AndroidManifest.xml
@@ -22,6 +22,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+         <activity
+            android:name="vb.activity.virtualbike.MapActivity">
+             
+         </activity>
+          
+        
          <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="vjEaNc1AABnHCY43famyMCTD" />
