--- a/VirtualBike/AndroidManifest.xml
+++ b/VirtualBike/AndroidManifest.xml
@@ -27,7 +27,11 @@
              
          </activity>
           
-        
+          <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" >
+        </service>
          <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="vjEaNc1AABnHCY43famyMCTD" />
